# fast-chat

./: .gitignore  Makefile  README.md  TODO.md
.agents/: Basic Coder.md
.github/workflows/: build.yml
_docs_/: Architecture.md  Dev Setup.md
desktop/: Cargo.toml  README.md  tauri.conf.json
desktop/icons/: icon.icns
desktop/src/: main.rs
desktop/src/api/: custom.rs  google.rs  lmstudio.rs  mod.rs  ollama.rs  openai.rs  providers.rs
desktop/src/commands/: conversations.rs  messages.rs  mod.rs  settings.rs
desktop/src/encryption/: mod.rs  secrets.rs
desktop/src/models/: conversation.rs  mod.rs  settings.rs
desktop/src/storage/: conversations.rs  mod.rs  settings.rs
desktop/src/window/: shortcuts.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.svelte  ShortcutPicker.svelte  app.css  main.js
frontend/src/components/: ChatView.svelte  ConversationItem.svelte  ConversationList.svelte  DeleteModal.svelte  LauncherView.svelte  Message.svelte  SettingsPanel.svelte  WelcomeScreen.svelte
frontend/src/lib/: utils.js
